update gradle + add frontend