@@ -13,10 +13,8 @@ import java.time.format.DateTimeFormatter
 buildscript {
 
     dependencies {
-        classpath 'com.opentable.components:otj-pg-embedded:0.13.3'
-        classpath 'org.postgresql:postgresql:42.2.20'
+        classpath 'org.postgresql:postgresql:42.5.1'
         //this is for processing the index.html at compile time
-        classpath "com.github.alfio-event:alf.io-public-frontend:$alfioPublicFrontendVersion"
         classpath "ch.digitalfondue.jfiveparse:jfiveparse:1.0.0"
         //
     }
@@ -26,24 +24,21 @@ buildscript {
             url "https://plugins.gradle.org/m2/"
         }
         mavenCentral()
-        maven {
-            url "https://jitpack.io"
-        }
     }
 }
 
 plugins {
-    id 'io.freefair.lombok' version '5.3.3.3'
+    id 'io.freefair.lombok' version '8.4'
     id 'java'
     id 'idea'
-    id 'org.kordamp.gradle.jacoco' version '0.45.0'
-    id 'com.github.ben-manes.versions' version '0.38.0'
+    id 'org.kordamp.gradle.jacoco' version '0.54.0'
+    id 'com.github.ben-manes.versions' version '0.50.0'
     id 'com.github.hierynomus.license' version '0.16.1'
-    id 'net.researchgate.release' version '2.8.1'
-    id 'org.springframework.boot' version '2.5.12'
-    id 'org.sonarqube' version '3.3'
-    id 'net.ltgt.errorprone' version '2.0.1'
-	id 'com.github.node-gradle.node' version '3.4.0'
+    id 'net.researchgate.release' version '3.0.2'
+    id 'org.springframework.boot' version '2.7.7'
+    id 'org.sonarqube' version '4.4.1.3373'
+    id 'net.ltgt.errorprone' version '2.0.2'
+    id 'com.github.node-gradle.node' version '7.0.1'
 }
 
 apply plugin: 'java'
@@ -52,13 +47,17 @@ apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 apply plugin: 'project-report'
 
+// MJML email templates translations to HTML
+node {
+    download = true
+}
 
 //as pointed out by @facundofarias, we should validate minimum javac version
-task validate {
+tasks.register('validate') {
     //check JDK version
     def javaVersion = JavaVersion.current()
-    if (!javaVersion.isJava11Compatible()) {
-        throw new GradleException("A Java JDK 11+ is required to build the project.")
+    if (!javaVersion.isCompatibleWith(JavaVersion.VERSION_17)) {
+        throw new GradleException("A Java JDK 17+ is required to build the project.")
     }
 }
 
@@ -100,9 +99,6 @@ configurations {
 repositories {
     mavenLocal()
     mavenCentral()
-    maven {
-        url "https://jitpack.io"
-    }
 }
 
 dependencies {
@@ -123,21 +119,21 @@ dependencies {
     implementation 'com.openhtmltopdf:openhtmltopdf-pdfbox:1.0.10'
     implementation 'ch.digitalfondue.jfiveparse:jfiveparse:1.0.0'
     /**/
-    implementation "com.google.zxing:core:3.5.1"
-    implementation "com.google.zxing:javase:3.5.1"
+    implementation 'com.google.zxing:core:3.5.1'
+    implementation 'com.google.zxing:javase:3.5.1'
     implementation "org.flywaydb:flyway-core"
     implementation "org.postgresql:postgresql"
     implementation "com.zaxxer:HikariCP"
 
     /* https://www.lunasec.io/docs/blog/log4j-zero-day/ */
-    implementation "org.apache.logging.log4j:log4j-api:2.19.0"
-    implementation "org.apache.logging.log4j:log4j-core:2.19.0"
-    implementation "org.apache.logging.log4j:log4j-jul:2.19.0"
-    implementation "org.apache.logging.log4j:log4j-slf4j-impl:2.19.0"
+    implementation 'org.apache.logging.log4j:log4j-api:2.19.0'
+    implementation 'org.apache.logging.log4j:log4j-core:2.19.0'
+    implementation 'org.apache.logging.log4j:log4j-jul:2.19.0'
+    implementation 'org.apache.logging.log4j:log4j-slf4j-impl:2.19.0'
     /**/
 
     implementation "com.stripe:stripe-java:22.4.0"
-    implementation 'com.paypal.sdk:checkout-sdk:1.0.5'
+    implementation 'com.paypal.sdk:checkout-sdk:2.0.0'
     implementation 'com.google.code.gson:gson:2.10'
     implementation 'com.fatboyindustrial.gson-javatime-serialisers:gson-javatime-serialisers:1.1.2', {
         exclude module: 'gson'
@@ -151,20 +147,18 @@ dependencies {
     implementation 'com.atlassian.commonmark:commonmark-ext-gfm-tables:0.17.0'
     implementation 'com.ryantenney.passkit4j:passkit4j:2.0.1'
     implementation 'com.github.ben-manes.caffeine:caffeine'
-    implementation 'com.github.scribejava:scribejava-core:5.0.0'
+    implementation 'com.github.scribejava:scribejava-core:8.3.3'
     implementation 'ch.digitalfondue.vatchecker:vatchecker:1.5.0'
-    implementation 'ch.digitalfondue.basicxlsx:basicxlsx:0.6.0'
+    implementation 'ch.digitalfondue.basicxlsx:basicxlsx:0.5.1'
     implementation 'org.imgscalr:imgscalr-lib:4.2'
     implementation 'org.mozilla:rhino-runtime:1.7.13'
     implementation 'com.google.auth:google-auth-library-oauth2-http:1.3.0'
 
-    implementation "com.github.alfio-event:alf.io-public-frontend:$alfioPublicFrontendVersion"
-
     compileOnly "javax.servlet:javax.servlet-api:4.0.1"
     testImplementation "javax.servlet:javax.servlet-api:4.0.1"
-    testImplementation 'org.testcontainers:testcontainers:1.16.2'
-    testImplementation 'org.testcontainers:postgresql:1.16.2'
-    testImplementation 'org.testcontainers:junit-jupiter:1.16.2'
+    testImplementation 'org.testcontainers:testcontainers:1.17.6'
+    testImplementation 'org.testcontainers:postgresql:1.17.6'
+    testImplementation 'org.testcontainers:junit-jupiter:1.17.6'
     testImplementation "org.springframework.boot:spring-boot-starter-test", {
         exclude module : 'spring-boot-starter-logging'
     }
@@ -197,6 +191,10 @@ dependencies {
     testImplementation "org.junit.jupiter:junit-jupiter-api"
     testImplementation "org.junit.jupiter:junit-jupiter-engine"
     testImplementation "org.junit.platform:junit-platform-engine"
+    testImplementation "org.mockito:mockito-inline:4.5.1"
+
+    testImplementation "org.springdoc:springdoc-openapi-ui:1.6.14"
+    testImplementation "org.openapitools.openapidiff:openapi-diff-core:2.0.1"
 
     providedCompile "org.springframework.boot:spring-boot-starter-jetty", {
         exclude group: "org.eclipse.jetty.websocket", module: "websocket-server"
@@ -209,16 +207,16 @@ dependencies {
         exclude module : 'spring-boot-starter-logging'
     }
 
-    implementation "org.joda:joda-money:1.0.1"
+    implementation "org.joda:joda-money:1.0.3"
 
-    testImplementation 'org.mock-server:mockserver-netty:5.11.2', {
+    testImplementation 'org.mock-server:mockserver-netty:5.13.2', {
         exclude group: 'org.mozilla', module: 'rhino'
     }
     annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
 
-    testImplementation 'org.seleniumhq.selenium:selenium-java:4.1.1'
+    testImplementation 'org.seleniumhq.selenium:selenium-java:4.7.2'
 
-    errorprone('com.google.errorprone:error_prone_core:2.4.0')
+    errorprone('com.google.errorprone:error_prone_core:2.10.0')
 }
 
 // -- license configuration
@@ -242,6 +240,7 @@ sonarqube {
         property 'sonar.organization', 'alfio-event'
         property 'sonar.projectKey', 'alfio-event_alf.io'
         property 'sonar.login', System.getenv('SONARCLOUD_TOKEN')
+        property 'sonar.gradle.skipCompile', 'true'
     }
 }
 
@@ -258,30 +257,7 @@ processResources {
         gradleProperties.withReader { properties.load(it) }
         properties['alfio.version'] = project.version
         properties['alfio.build-ts'] = ZonedDateTime.now(ZoneId.of("UTC")).format(DateTimeFormatter.ISO_ZONED_DATE_TIME)
-        properties['alfio.frontend.version'] = alfioPublicFrontendVersion
         gradleProperties.withWriter { properties.store(it, null) }
-
-
-        //
-        // alf.io public frontend: read index.html rewrite path for css/js
-
-        final resource = Thread.currentThread().getContextClassLoader().getResourceAsStream("META-INF/resources/webjars/alfio-public-frontend/$alfioPublicFrontendVersion/alfio-public-frontend/index.html")
-        final indexDoc = new Parser().parse(new InputStreamReader(resource, StandardCharsets.UTF_8))
-
-        final basePath = "webjars/alfio-public-frontend/$alfioPublicFrontendVersion/alfio-public-frontend/"
-        NodeMatcher scriptNodes = Selector.select().element("script").toMatcher()
-
-        indexDoc.getAllNodesMatching(scriptNodes).stream().forEach({
-            it.setAttribute("src", basePath + it.getAttribute("src"))
-        })
-
-        NodeMatcher cssNodes = Selector.select().element("link").attrValEq("rel", "stylesheet").toMatcher();
-        indexDoc.getAllNodesMatching(cssNodes).stream().forEach({
-            it.setAttribute("href", basePath + it.getAttribute("href"))
-        })
-
-        final alfioPublicIndex = new File((File) it.destinationDir, "alfio-public-frontend-index.html")
-        alfioPublicIndex.write(HtmlSerializer.serialize(indexDoc), "UTF-8", false)
     }
 }
 
@@ -293,7 +269,8 @@ compileTestJava {
         'AlmostJavadoc',
         'MissingSummary',
         'EscapedEntity',
-        'EmptyBlockTag'
+        'EmptyBlockTag',
+        'SameNameButDifferent'
     )
 }
 
@@ -308,7 +285,9 @@ compileJava {
         'AlmostJavadoc',
         'MissingSummary',
         'EscapedEntity',
-        'EmptyBlockTag'
+        'EmptyBlockTag',
+        'SameNameButDifferent',
+        'ReturnValueIgnored'
     )
 }
 
@@ -319,7 +298,6 @@ test {
     useJUnitPlatform()
     systemProperties = System.properties
     systemProperties.remove("java.endorsed.dirs")
-    jvmArgs("--illegal-access=warn")
     testLogging {
         events "failed"
         exceptionFormat "full"
@@ -327,6 +305,9 @@ test {
     }
 }
 
+springBoot {
+    mainClass = 'alfio.config.SpringBootLauncher'
+}
 
 bootRun {
     def externalConfig = new File("./custom.jvmargs")
@@ -337,32 +318,15 @@ bootRun {
         "-Ddatasource.username=${project.datasourceUsername}",
         "-Ddatasource.password=${project.datasourcePassword}",
         "-Dalfio.version=${project.version}",
-        "-Dalfio.build-ts=${ZonedDateTime.now(ZoneId.of("UTC")).format(DateTimeFormatter.ISO_ZONED_DATE_TIME)}",
-        "-Dalfio.frontend.version=$alfioPublicFrontendVersion"
+        "-Dalfio.build-ts=${ZonedDateTime.now(ZoneId.of("UTC")).format(DateTimeFormatter.ISO_ZONED_DATE_TIME)}"
     ]
     if(externalConfig.exists()) {
         opts += externalConfig.readLines()
     }
     jvmArgs = opts
-    mainClass = 'alfio.config.SpringBootLauncher'
-}
-
-bootWar {
-    mainClassName = 'alfio.config.SpringBootLauncher'
-    classifier = 'boot'
-
-    def bowerDir = "resources/bower_components"
-    def excludesFile = new File("./lib_exclude")
-    if(excludesFile.exists()) {
-        exclude(excludesFile.readLines().collect({ bowerDir + it }))
-    }
 }
 
 // -- code-coverage
-
-jacoco {
-    toolVersion = '0.8.7'
-}
 
 jacocoTestReport {
     group = 'Reporting'
@@ -371,25 +335,59 @@ jacocoTestReport {
     sourceDirectories.from(project.files(sourceSets.main.allSource.srcDirs))
     classDirectories.from(project.files(sourceSets.main.output))
     reports {
-        xml.enabled = true
-        csv.enabled = false
-        html.enabled = true
+        xml {
+            enabled(true)
+        }
+        csv {
+            enabled(false)
+        }
+        html {
+            enabled(true)
+        }
     }
 }
 
-task dockerize(type: Copy) {
+tasks.register('dockerize', Copy) {
     from 'src/main/dist/Dockerfile'
     into "${buildDir}/dockerize"
     filter(ReplaceTokens, tokens: [ALFIO_VERSION: project.version])
 }
 
-task distribution(type: Copy) {
-    from zipTree("${project.buildDir}/libs/alfio-${project.version}-boot.war")
-    into "${buildDir}/dockerize"
-    dependsOn build, dockerize
+tasks.register('frontendNpmInstall', NpmTask) {
+    args = ['--prefix', "${project.projectDir}/frontend", 'install']
 }
 
-task clever(type: Copy) {
+tasks.register('frontendBuild', NpmTask) {
+    dependsOn frontendNpmInstall
+    args = ['--prefix', "${project.projectDir}/frontend", 'run', 'build']
+    outputs.dir("${project.projectDir}/frontend/dist")
+}
+
+clean.doFirst {
+    delete "${project.projectDir}/frontend/dist"
+}
+
+tasks.register('publicFrontendIndexTransform', FrontendIndexTransformTask) {
+    dependsOn frontendBuild
+    basePath.set("frontend-public/")
+    indexHtml.set(layout.projectDirectory.file("frontend/dist/alfio-public-frontend/index.html"))
+    indexHtmlTransformed.set(layout.buildDirectory.file("index-transformed/alfio-public-frontend-index.html"))
+}
+
+//tasks.register('adminFrontendIndexTransform', FrontendIndexTransformTask) {
+//    dependsOn frontendBuild
+//    basePath.set("frontend-admin/")
+//    indexHtml.set(layout.projectDirectory.file("frontend/dist/alfio-admin-frontend/index.html"))
+//    indexHtmlTransformed.set(layout.buildDirectory.file("index-transformed/alfio-admin-frontend-index.html"))
+//}
+
+tasks.register('distribution', Copy) {
+    from zipTree("${project.buildDir}/libs/alfio-${project.version}-boot.war")
+    into "${buildDir}/dockerize"
+    dependsOn publicFrontendIndexTransform, build, dockerize
+}
+
+tasks.register('clever', Copy) {
     from new File(project.buildDir, "libs/alfio-${project.version}-boot.war")
     rename(new Transformer<String, String>() {
         @Override
@@ -398,31 +396,83 @@ task clever(type: Copy) {
         }
     })
     into "${project.buildDir}/clevercloud"
-    dependsOn build
+    dependsOn publicFrontendIndexTransform/*, adminFrontendIndexTransform*/, build
 }
 
 release {
     buildTasks = ['distribution']
     git {
-        requireBranch = ''
-        pushToRemote = 'origin'
-        signTag = true
+        requireBranch.set('')
+        pushToRemote.set('origin')
+        signTag.set(true)
     }
 }
-// see https://github.com/freefair/gradle-plugins/issues/31#issuecomment-475355674
-// since we have a custom lombok.config configuration file, we disable automatic override
-generateLombokConfig.enabled = false
+
+bootWar {
+    dependsOn publicFrontendIndexTransform//, adminFrontendIndexTransform
+    archiveClassifier.set('boot')
+    from(tasks.named("frontendBuild")) {
+        into 'resources'
+    }
+    from(tasks.named("publicFrontendIndexTransform")) {
+        rename 'alfio-public-frontend-index.html', 'WEB-INF/classes/alfio-public-frontend-index.html'
+    }
+    /*from(tasks.named("adminFrontendIndexTransform")) {
+        rename 'alfio-admin-frontend-index.html', 'WEB-INF/classes/alfio-admin-frontend-index.html'
+    }*/
+    def bowerDir = "resources/bower_components"
+    def excludesFile = new File("./lib_exclude")
+    if(excludesFile.exists()) {
+        exclude(excludesFile.readLines().collect({ bowerDir + it }))
+    }
+}
 
 // MJML email templates translations to HTML
-node {
-    download = true
+
+tasks.register('mjmlToHtml', NodeTask) {
+    dependsOn npmInstall
+    script = file('src/main/node/mjmlToHtml.js')
 }
 
-task mjmlToHtml( type: NodeTask, dependsOn: 'npmInstall' ) {
-    script = file( 'src/main/node/mjmlToHtml.js' )
-}
 // We build HTML templates from MJML source files and then save them under "build/generated/resources" in order to be
 // included in the final artifact.
 // TODO should we do the same for plaintext templates? See https://gist.github.com/brasilikum/3cd515bad5541ca6c76873faf10445c2
 processResources.dependsOn(mjmlToHtml)
 sourceSets.main.output.dir file("$buildDir/generated/resources"), builtBy: mjmlToHtml
+
+// transform index.html
+abstract class FrontendIndexTransformTask extends org.gradle.api.DefaultTask {
+
+    @org.gradle.api.tasks.InputFile
+    abstract org.gradle.api.file.RegularFileProperty getIndexHtml()
+
+    @org.gradle.api.tasks.OutputFile
+    abstract org.gradle.api.file.RegularFileProperty getIndexHtmlTransformed()
+
+    @org.gradle.api.tasks.Input
+    abstract Property<String> getBasePath()
+
+    FrontendIndexTransformTask() {
+        basePath.convention("frontend-public/")
+    }
+
+
+    @org.gradle.api.tasks.TaskAction
+    def doWork() {
+        final resource = indexHtml.get().asFile.newInputStream()
+        final indexDoc = new Parser().parse(new InputStreamReader(resource, StandardCharsets.UTF_8))
+
+        NodeMatcher scriptNodes = Selector.select().element("script").toMatcher()
+
+        indexDoc.getAllNodesMatching(scriptNodes).stream().forEach({
+            it.setAttribute("src", basePath.get() + it.getAttribute("src"))
+        })
+
+        NodeMatcher cssNodes = Selector.select().element("link").attrValEq("rel", "stylesheet").toMatcher()
+        indexDoc.getAllNodesMatching(cssNodes).stream().forEach({
+            it.setAttribute("href", basePath.get() + it.getAttribute("href"))
+        })
+
+        indexHtmlTransformed.get().asFile.write(HtmlSerializer.serialize(indexDoc), "UTF-8", false)
+    }
+}
